--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   easy_date_timeline: ^1.1.3
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
+  provider: ^6.1.2
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
