--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.7
   google_fonts: ^5.0.0
-  easy_date_timeline: ^1.1.3
+  easy_date_timeline: 1.0.3
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
   provider: ^6.1.2
   flutter_slidable: ^3.1.1
+
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +63,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
